syntax = "proto3";

package generated;

option go_package="./generated";

import "google/protobuf/timestamp.proto";

message Account {
    string login = 1;
    string password = 2;
    string email = 3;
    string phone_number = 4;
};

message Profile {
    string name = 1;
    string surname = 2;
    string profile_id = 3;
    google.protobuf.Timestamp birthday = 4;
    string bio = 5;
};

message UserData {
    Account account_info = 1;
    Profile profile_info = 2;
};
